# milwaukee_hacks

./: .dockerignore  Cargo.toml  Dockerfile  README.md  notes.md  products.toml
algorithm/: Cargo.toml  Justfile
algorithm/src/: lib.rs  types.rs
algorithm/src/promos/: bmsm.rs  bogo.rs  mod.rs
database/: Cargo.toml  config.toml  resp.json  respfmt.json
database/.sqlx/: query-2092253aba02883dcd0e37e5a76ab6181e6dba0b0147af7d1f793dcb870f569c.json  query-3d4246f52b1585cf2310e96da998b93747d60b01ff255f98620ad465e43b0d37.json  query-80e7944e7538f5ba8ccc3c731809ac8a710e231ae1576436138eeb7a8de01c06.json  query-91cf6fa2e6be2c0f8b2d3d367150b61b4cc2a4d438728a2dcafe957aad84c132.json  query-99d95cddf756b7904e7917acaf9d252f81f783f68eeeb5f55d969f9614c12b68.json  query-df481eb8e8dafe5428703682fd6508a7059c9f600412e0e414df68b3df2e547d.json  query-df7017708a2119d331c6336a297afc7a471ff1072e8d6b3e63c9836c48ac7ab3.json  query-e4dce112a75c5b24e1f16eb59a2e8204cb4441491240a1e812c5a7b9f4333b2a.json  query-f2dabb0bedf4971cfeec2c8301806b8be7f2a714cbf9b49fdaedc73a180aceb5.json  query-f46eac4c9957915802cb32571b6b7c7d69a8898eb7e6af4d885ab3497e05f288.json  query-fb6af276e64fd3aeefe7aae4c90591dac238bb0efb4fc64d359c900fe32e464d.json
database/migrations/: 20250316060551_init.sql  20250406054808_promo_name.sql  20250406064830_fix_end_date.sql  20250508165921_add_reward_tiers.sql  20250510075115_add_updated_at.sql  20250609221207_product_promos_table.sql  20250610060210_add_eligibility_criteria.sql  20250808064817_product_pricing_json.sql  20250811183153_remove_product_promos.sql  20250822045744_add_runs_table.sql  20250823044302_price_history_table.sql
database/src/: config.rs  lib.rs  main.rs
database/src/requests/: get_product.rs  get_products.rs  get_promo_items.rs  get_promos.rs  mod.rs
(+72 files in other folders)
