[package]
name = "algorithm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
itertools = "0.14.0"
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
toml = "0.8.20"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
