[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
ureq = { version = "3.0.9", features = ["json"] }
