[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "0.1.5", package = "serde_json_path_to_error" }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
